Fix white space formatting in basic usage example (#216)

--- a/dev-site-config/IllustrationGrid.scss
+++ b/dev-site-config/IllustrationGrid.scss
@@ -6,7 +6,7 @@ $grid: 'tui-illustration-grid';
   flex-wrap: wrap;
 
   pre .codeblock {
-    white-space: pre-line; // helps with wrapping inside of flexbox
+    white-space: pre-wrap; // helps with wrapping inside of flexbox
   }
 }
 
